// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`spine full axis matrix (16 representative cells) > baseline-frontier-astronomy: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Atlas-Bridge V records a phase shift each time the failed terraforming biosphere passes through. The industrial mirror swarm failure drifts the baselines Atlas-Bridge V relies on. The industrial mirror swarm failure introduces a measurable perturbation in Atlas-Bridge VII. Atlas-Bridge VII carries Atlas-Bridge VII Station 88 on its surface.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "body",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "Failed terraforming biosphere took shape before the photometric reset, the failed terraforming biosphere is drifting the baselines on which Atlas-Bridge V was sited.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > baseline-frontier-balanced: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Ash Meridian Navy and Helion Debt Synod both want the chain of authority. Helion Debt Synod refuses to recognize Ninth Ledger Office's authority. The compact between Glasshouse Biosafety Compact and Ninth Ledger Office has gone bad.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "The compact between Ash Meridian Navy and Helion Debt Synod broke before the gate cooled, Ash Meridian Navy and Helion Debt Synod can't both set the rules — and the rest of the system knows it.",
  "spineVisibility": "contested",
}
`;

exports[`spine full axis matrix (16 representative cells) > baseline-frontier-cinematic: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Carrion Wake keeps the receipts. Vow-Breaker Wake keeps the witnesses. Between Pale Saint Pact and Vow-Breaker Wake the knife is already drawn. Brothers of Choir wants Carrion Wake to bleed first.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "Between Carrion Wake and Vow-Breaker Wake the war is already lost; only the funerals remain.",
  "spineVisibility": "contested",
}
`;

exports[`spine full axis matrix (16 representative cells) > baseline-realistic-astronomy: stable spine + body[0] structural fields 1`] = `
{
  "body0": "The black-market route beacon lattice drifts the baselines Aperture Trust relies on. The black-market route beacon lattice drifts the baselines Suhail-37 Belt VI relies on. The amplitude of the public festival tied to safe transit windows exceeds the operating envelope of Suhail-37 Belt VI. Suhail-37 Belt VI Reach is the only major foothold on Suhail-37 Belt VI.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "Black-market route beacon lattice took shape in the long-baseline era, the black-market route beacon lattice is shifting the operating envelope Aperture Trust was calibrated against.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > baseline-realistic-balanced: stable spine + body[0] structural fields 1`] = `
{
  "body0": "The narrow-AI perception fog keeps shifting under Wouri Survey-176 III. Each pass of the narrow-AI perception fog costs Wouri Survey-176 IV a margin it doesn't have. Wouri Survey-176 V can't plan around the narrow-AI perception fog anymore. Wouri Survey-176 III Bastion 18 sits on Wouri Survey-176 III. Wouri Survey-176 V hosts Wouri Survey-176 V Charter.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "body",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "Narrow-AI perception fog took shape after the great rerouting, the narrow-AI perception fog is rewriting the constants Wouri Survey-176 III was built around.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > baseline-realistic-cinematic: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Tarandus Route-211 Belt V has been watching the long-period comet storm eat its margins for a generation. So of course, Salt Wound Cabal swore the pact would hold; Salt Wound Order swore otherwise. And then, Something is wrong under Tarandus Route-211 IV, and flare-amplified bleed season is the name people whisper for it. Tarandus Route-211 Belt V hosts Tarandus Route-211 Belt V Hold.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "body",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "Everything Tarandus Route-211 Belt V was built to outlast is being unmade by the long-period comet storm.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > corner-frontier-cinematic-fracture-hub: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Bone Lantern Wake keeps the receipts. Last Ledger Synod keeps the witnesses. Between Last Ledger Synod and Sisters of Synod the knife is already drawn. Red Wake Pact swore the pact would hold; Sisters of Synod swore otherwise. Pipit's Delta V - Moon I Station draws everything it consumes from Illegal Sol-prohibited geometry sample. Pipit's Delta I Charter depends on Illegal Sol-prohibited geometry sample for everything.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "Between Bone Lantern Wake and Last Ledger Synod the war is already lost; only the funerals remain.",
  "spineVisibility": "contested",
}
`;

exports[`spine full axis matrix (16 representative cells) > corner-realistic-astronomy-low-sparse: stable spine + body[0] structural fields 1`] = `
{
  "body0": "The amplitude of the debt-fleet anchor graveyard exceeds the operating envelope of Watch-Order Working Group. The narrow-AI perception fog drifts the baselines Guniibuu-Apdu Minor VII relies on. The debt-fleet anchor graveyard drifts the baselines Guniibuu-Apdu Minor VII relies on. Guniibuu-Apdu Minor VII carries Guniibuu-Apdu Minor VII - Moon I Hold on its surface.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "Debt-fleet anchor graveyard took shape before the catalog was sealed, the debt-fleet anchor graveyard is drifting the baselines on which Watch-Order Working Group was sited.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > density-crowded: stable spine + body[0] structural fields 1`] = `
{
  "body0": "The debt-fleet anchor graveyard drifts the baselines Yuyu's Field Anomaly II relies on. The debt-fleet anchor graveyard drifts the baselines Yuyu's Field VIII relies on. Yuyu's Field Anomaly II records a phase shift each time the Gardener warning beacon passes through. Yuyu's Field VIII carries Yuyu's Field Node on its surface.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "body",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "The debt-fleet anchor graveyard is drifting the baselines on which Yuyu's Field Anomaly II was sited.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > density-hub: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Intan's Crown Belt IX records a phase shift each time the moving bleed-node river passes through. Intan's Crown V records a phase shift each time the refugee ark parking orbit passes through. The moving bleed-node river introduces a measurable perturbation in Intan's Crown II. Intan's Crown Belt IX Cordon is the only major foothold on Intan's Crown Belt IX.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "body",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "The moving bleed-node river is drifting the baselines on which Intan's Crown Belt IX was sited.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > density-normal: stable spine + body[0] structural fields 1`] = `
{
  "body0": "The long-period comet storm drifts the baselines Coronagraph Bureau relies on. The amplitude of the long-period comet storm exceeds the operating envelope of Vey Picket-265 II. The chiral contamination bloom introduces a measurable perturbation in Vey Picket-265 II.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "The long-period comet storm is drifting the baselines on which Coronagraph Bureau was sited.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > density-sparse: stable spine + body[0] structural fields 1`] = `
{
  "body0": "The chiral contamination bloom drifts the baselines Arneb Trace-209 III relies on. Arneb Trace-209 III records a phase shift each time the debt-fleet anchor graveyard passes through. The debt-fleet anchor graveyard drifts the baselines Long Baseline Authority relies on. Arneb Trace-209 III hosts Arneb Trace-209 III Station 85.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "body",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "Chiral contamination bloom took shape before the catalog was sealed, the chiral contamination bloom is shifting the operating envelope Arneb Trace-209 III was calibrated against.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > gu-axis-fracture: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Helion Debt Synod refuses to recognize Kestrel Free Compact's authority. Kestrel Free Compact disputes Veyra-Locke Concession's claim. The compact between Helion Debt Synod and Red Vane Labor Combine has gone bad.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "The compact between Helion Debt Synod and Kestrel Free Compact broke in the second wave, Helion Debt Synod and Kestrel Free Compact can't both set the rules — and the rest of the system knows it.",
  "spineVisibility": "contested",
}
`;

exports[`spine full axis matrix (16 representative cells) > gu-axis-high: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Kestrel Free Compact disputes Sepulcher Archive Court's claim. The compact between Sepulcher Archive Court and Veyra-Locke Concession has gone bad. Orison Route Authority refuses to recognize Veyra-Locke Concession's authority.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "The compact between Kestrel Free Compact and Sepulcher Archive Court broke in the manifest wars, Kestrel Free Compact and Sepulcher Archive Court can't both set the rules — and the rest of the system knows it.",
  "spineVisibility": "contested",
}
`;

exports[`spine full axis matrix (16 representative cells) > gu-axis-low: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Helion Debt Synod and Red Vane Labor Combine both want the trade ledger. Ash Meridian Navy and Glasshouse Biosafety Compact both want the chain of authority. Helion Debt Synod refuses to recognize Kestrel Free Compact's authority.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "Helion Debt Synod and Red Vane Labor Combine can't both set the rules — and the rest of the system knows it.",
  "spineVisibility": "contested",
}
`;

exports[`spine full axis matrix (16 representative cells) > gu-axis-normal: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Orison Route Authority refuses to recognize Pale Choir Communion's authority. The compact between Red Vane Labor Combine and Veyra-Locke Concession has gone bad. Orison Route Authority and Veyra-Locke Concession both want the trade ledger.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "Orison Route Authority and Pale Choir Communion can't both set the rules — and the rest of the system knows it.",
  "spineVisibility": "contested",
}
`;
